
<resources>
    <string name="app_name">Blood Bank Management</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="btn_user_profile">User Profile</string>
    <string name="btn_logout">Logout</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_quantity">Quantity</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_donor_id">Donor Id</string>
    <string name="prompt_request_id">Request Id</string>
    <string name="prompt_fullname">Fullname</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_mobilenumber">Mobile Number</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_email_address">Email Address</string>
    <string name="prompt_dob">Date of Birth</string>
    <string name="prompt_blood_group">Blood Group</string>
    <string name="prompt_is_donor">Is Donor</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_register">REGISTER</string>
    <string name="action_submit">SUBMIT</string>
    <string name="action_male">MALE</string>
    <string name="action_female">FEMALE</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin_home_screen">AdminHomeScreenActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_transaction">Blood Transaction</string>
    <string name="save">Save</string>
</resources>
